// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService loginWithGoogle should create a new user when user does not exist 1`] = `
UserModel {
  "accountDeactivated": false,
  "accountType": "google",
  "defaultMessage": null,
  "desktopNotifsEnabled": false,
  "email": "mocked_email@example.com",
  "emailVerified": true,
  "firstName": "John",
  "hideInsights": null,
  "id": 1,
  "includeDefaultMessage": true,
  "lastName": "Doe",
  "name": "John Doe",
  "organizationUser": OrganizationUserModel {
    "id": 1,
    "organizationId": 1,
    "role": "member",
    "userId": 1,
  },
  "password": null,
  "photoURL": "mocked_picture_url",
  "readChangeLog": false,
  "sid": null,
  "userRole": "user",
}
`;

exports[`AuthService loginWithShibboleth should create a new user when user does not exist 1`] = `
UserModel {
  "accountDeactivated": false,
  "accountType": "shibboleth",
  "defaultMessage": null,
  "desktopNotifsEnabled": false,
  "email": "mocked_email@example.com",
  "emailVerified": true,
  "firstName": "John",
  "hideInsights": null,
  "id": 1,
  "includeDefaultMessage": true,
  "lastName": "Doe",
  "name": "John Doe",
  "organizationUser": OrganizationUserModel {
    "id": 1,
    "organizationId": 1,
    "role": "member",
    "userId": 1,
  },
  "password": null,
  "photoURL": null,
  "readChangeLog": false,
  "sid": null,
  "userRole": "user",
}
`;
